--- a/Assignment2.1.csproj
+++ b/Assignment2.1.csproj
@@ -1,8 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Assignment2._1</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Conrollers\**" />
+    <Content Remove="Conrollers\**" />
+    <EmbeddedResource Remove="Conrollers\**" />
+    <None Remove="Conrollers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="OdeToCode.UseNodeModules" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+
+  </ItemGroup>
 
 </Project>
